# Knowledge-Management

backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/app/: __init__.py  logger.py  middleware.py  server.py  settings.py
backend/clients/: agent_memory.py  chunker_client.py  groq_whisper_client.py  idrivee2_client.py  markitdown_client.py  mongodb_client.py  pinecone_client.py  unstructured_client.py  video_aligner.py  video_frame_extractor.py  video_processor_client.py  video_scene_detector.py
backend/models/: __init__.py  health.py
backend/routers/: health.py  upload.py
backend/scripts/: create_indexes.py
backend/services/: chat.py  ingestion_service.py
backend/utils/: file_utils.py
